# PROCESSOS_PORTO

./: .gitignore  captura_ftp.py  parametros.py  pyproject.toml  token.pickle
Analitico_Porto/2024/12/17/: ENTRADAS_PORTO_17_12_2024.xlsx  SAIDAS_PORTO_17_12_2024.xlsx
Analitico_Porto/2024/12/18/: ENTRADAS_PORTO_18_12_2024.xlsx  SAIDAS_PORTO_18_12_2024.xlsx
Analitico_Porto/2024/12/19/: ENTRADAS_PORTO_19_12_2024.xlsx  SAIDAS_PORTO_19_12_2024.xlsx
Analitico_Porto/2024/12/20/: ENTRADAS_PORTO_20_12_2024.xlsx  SAIDAS_PORTO_20_12_2024.xlsx
Analitico_Porto/2024/12/23/: ENTRADAS_PORTO_23_12_2024.xlsx  SAIDAS_PORTO_23_12_2024.xlsx
LOTES_IMPORTAÇÃO/2024/11/LOTE_Nov_12_2024/: C0000008045.TXT
LOTES_IMPORTAÇÃO/2024/11/LOTE_Nov_13_2024/: C0000008145.TXT
LOTES_IMPORTAÇÃO/2024/11/LOTE_Nov_14_2024/: C0000008245.TXT  C0000008350.TXT
LOTES_IMPORTAÇÃO/2024/11/LOTE_Nov_15_2024/: C0000008345.TXT  C0000008450.TXT
LOTES_IMPORTAÇÃO/2024/11/LOTE_Nov_16_2024/: C0000008445.TXT  C0000008550.TXT
LOTES_IMPORTAÇÃO/2024/11/LOTE_Nov_18_2024/: C0000008545.TXT
LOTES_IMPORTAÇÃO/2024/11/LOTE_Nov_19_2024/: C0000008645.TXT  C0000008750.TXT
LOTES_IMPORTAÇÃO/2024/11/LOTE_Nov_21_2024/: C0000008845.TXT  C0000008950.TXT
LOTES_IMPORTAÇÃO/2024/11/LOTE_Nov_22_2024/: C0000008945.TXT  C0000009050.TXT
LOTES_IMPORTAÇÃO/2024/11/LOTE_Nov_25_2024/: C0000009145.TXT
Query/: analitico_entradas_porto.sql  analitico_saidas_porto.sql  entradas_porto.sql  saidas_porto.sql
SCRIPTS/: API_Token.py  conect_db.py  nova_captura.py  parametros.py  token.pickle
(+29 files in other folders)
