[tool.poetry]
name = "processos-porto"
version = "0.1.0"
description = ""
authors = ["Arthur Costa"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
paramiko = "^3.5.0"
requests == "^0.2.9"
pandas = " "^2.32.3"
pysftp ^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
