[tool.poetry]
name = "processos-porto"
version = "0.1.0"
description = ""
authors = ["Arthur Costa"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
schedule = "^1.2.2"
requests = "^2.32.3"
datetime = "^5.5"
pandas = "^2.2.3"
pyodbc = "^5.2.0"
pyautogui = "^0.9.54"
selenium = "^4.26.1"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
